Update Faq Code

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             <a class="nav__item" href="#">Home</a>
                         </li>
                         <li>
-                            <a class="nav__item" href="#">Services</a>
+                            <a class="nav__item" href="service.html">Services</a>
                         </li>
                         <li>
                             <a class="nav__item" href="#">Resources</a>
@@ -36,6 +36,8 @@
         </div>
     </header>
     <!-- ==== header end ==== -->
+    
+   
 
     <!-- === footer start === -->
     <footer class="footer">
