--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index Page</title>
+    <title>Edgevana</title>
     <!-- stylesheets -->
     <link rel="stylesheet" href="assets/css/stylesheet.css">
     <link rel="stylesheet" href="assets/font/stylesheet.css">
@@ -15,7 +15,9 @@
         <div class="container">
             <div class="header__inner">
                 <div class="header__logo">
-                    <img src="assets/svg/edgevana-logo.svg" alt="image-description">
+                    <a href="index.html">
+                        <img src="assets/svg/edgevana-logo.svg" alt="image-description">
+                    </a>
                 </div>
                 <nav class="nav__list">
                     <ul>
