--- a/career.html
+++ b/career.html
@@ -993,13 +993,43 @@
                 <div class="sec__content__inner">
                     <div class="tabs">
                         <div class="tab__btn">
-                            <button class="btn">Office Administrator</button>
+                            <ul>
+                                <li>
+                                    <button class="btn" value="1">Office Administrator</button>
+                                </li>
+                                <li>
+                                    <button class="btn">Software Engineer</button>
+                                </li>
+                                <li>
+                                    <button class="btn">Product Manager</button>
+                                </li>
+                                <li>
+                                    <button class="btn">Graphics & Web Designer</button>
+                                </li>
+                                <li>
+                                    <button class="btn">IT Manager</button>
+                                </li>
+                                <li>
+                                    <button class="btn">Marketing Manager </button>
+                                </li>
+                                <li>
+                                    <button class="btn">Head of Business Development  </button>
+                                </li>
+                                <li>
+                                    <button class="btn">Client Support Manager  </button>
+                                </li>
+                                <li>
+                                    <button class="btn">Marketing Intern </button>
+                                </li>
+                            </ul>
                         </div>
                         <div class="tab__content">
-                            <h3 class="sec__brief">Featured role</h3>
-                            <p class="sec__info">Manage all aspects of the company's IT needs, including desktops, networks, and hosting.</p>
-                            <div class="apply__btn">
-                                <a href="#" class="primary-btn">Apply Now</a>
+                            <div class="tab__content__inner" value="1">
+                                <h3 class="sec__brief">Featured role</h3>
+                                <p class="sec__info">Manage all aspects of the company's IT needs, including desktops, networks, and hosting.</p>
+                                <div class="apply__btn">
+                                    <a href="#" class="primary-btn">Apply Now</a>
+                                </div>
                             </div>
                         </div>
                     </div>
