upload terms page

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
                 <nav class="nav__list">
                     <ul>
                         <li>
-                            <a class="nav__item" href="#">Home</a>
+                            <a class="nav__item" href="index.html">Home</a>
                         </li>
                         <li>
-                            <a class="nav__item" href="#">Services</a>
+                            <a class="nav__item" href="service.html">Services</a>
                         </li>
                         <li>
                             <a class="nav__item" href="#">Resources</a>
                         </li>
                         <li class="col-lg-hide">
-                            <a class="nav__item" href="#">Contact us</a>
+                            <a class="nav__item" href="contact-us.html">Contact us</a>
                         </li>
                     </ul>
                 </nav>
@@ -381,9 +381,9 @@
                                 <h3 class="item__heading">Explore</h3>
                                 <ul>
                                     <li><a class="item" href="#">About us</a></li>
-                                    <li><a class="item" href="#">Partner</a></li>
+                                    <li><a class="item" href="partner.html">Partner</a></li>
                                     <li><a class="item" href="#">Sustainability</a></li>
-                                    <li><a class="item" href="#">Careers</a></li>
+                                    <li><a class="item" href="career.html">Careers</a></li>
                                 </ul>
                             </div>
                             <div class="items">
@@ -434,6 +434,7 @@
         </div>
     </footer>
     <!-- === footer end === -->
+    
     <!-- === script files === -->
     <script src="assets/js/common.js"></script>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
