--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <a class="nav__item" href="#">Home</a>
                         </li>
                         <li>
-                            <a class="nav__item" href="#">Services</a>
+                            <a class="nav__item" href="service.html">Services</a>
                         </li>
                         <li>
                             <a class="nav__item" href="#">Resources</a>
