upload cookie policy page

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -151,21 +151,30 @@
                 <div class="sec__content">
                     <div class="sec__content__inner">
                         <div class="policy__text">
-                            <h3 class="policy__sub__heading">Authority of Website Administrator</h3>
-                            <p class="policy__brief">Edgevana may in its discretion modify, edit, translate, suspend, restrict access to, or terminate this Website, these Terms, the Content, or any link at any time without liability or prior notice. Edgevana may in its discretion terminate the browsing of, registration with, and use of this Website by any User at any time without liability or prior notice for any reason, including for any breach of these Terms.</p>
+                            <p class="policy__brief mb-40">Data Submitted on Sites. In order to enjoy the full functionality of the Sites or to conduct business with us, you may be prompted to provide certain Personal Data to us:</p>
+                            <ul>
+                                <li class="mb-30">
+                                    <p class="policy__brief">by filling in forms (for example, a “Contact Us” form) on our Sites, at a trade show, or anywhere else we conduct business;</p> 
+                                </li>
+                                <li class="mb-30">
+                                    <p class="policy__brief">by downloading or accessing the Edgevana Services;</p> 
+                                </li>
+                                <li class="mb-30">
+                                    <p class="policy__brief">by downloading documentation from our Sites;</p> 
+                                </li>
+                                <li class="mb-30">
+                                    <p class="policy__brief">by subscribing to newsletters or other communications; or</p> 
+                                </li>
+                                <li>
+                                    <p class="policy__brief">by corresponding with us by phone, e-mail or otherwise using our contact details.</p> 
+                                </li>
+                            </ul>
                         </div>
-                        <h2 class="policy__heading">4. User Requirements and Obligations.</h2>
                         <div class="policy__text">
-                            <h3 class="policy__sub__heading">Compliance</h3>
-                            <p class="policy__brief">User will comply with all applicable laws in connection with use of this Website.</p>
-                        </div>
-                        <div class="policy__text">
-                            <h3 class="policy__sub__heading">Unsuitable Conduct</h3>
-                            <p class="policy__brief">User will not engage in conduct on or in connection with this Website that is illegal, misleading, infringing, defamatory, obscene, offensive, or otherwise objectionable. User will not cause damage, embarrassment, or adverse publicity to Edgevana.</p>
-                        </div>
-                        <div class="policy__text">
-                            <h3 class="policy__sub__heading">User Cooperation and Notification</h3>
-                            <p class="policy__brief">User will cooperate with all reasonable requests of Edgevana and will notify Edgevana promptly upon learning of any actual or suspected breach of these Terms by User or unauthorized use or abuse of this Website.</p>
+                            <p class="policy__brief mb-50">Typically, the Personal Data includes name, business affiliation, business address, telephone number, and email address, and any other personal details provided or required to resolve inquiries or complaints.
+                                Customer Support and Service. When Customers contact us for support or other customer service requests, we maintain support tickets and other records related to the requests. We may also collect call recordings related to support and customer service-related calls.</p> 
+                            <p class="policy__brief mb-50">Usage Details. We collect information about Customers’ usage of our Services, including IP address, Customer ID, email address, and other usage statistics. We do not collect usage details about Customer end users, except as necessary to provide and support the Services requested by Customers.</p> 
+                            <p class="policy__brief mb-50">When you visit our Sites, our server automatically collects certain browser or device generated information, which may in some cases constitute Personal Data, including but not limited to:</p> 
                         </div>
                     </div>
                 </div>
@@ -180,23 +189,40 @@
                 <div class="sec__content">
                     <div class="sec__content__inner">
                         <div class="policy__text">
-                            <h3 class="policy__sub__heading">Third Party Sites and Other Information</h3>
-                            <p class="policy__brief">As a convenience to User, this Website may contain Content, links, and other information submitted by third parties over whom Edgevana has no control or responsibility. Edgevana has no obligation to monitor, control, or restrict the use of this Website or third party websites accessible via links on this Website. These other sites are not under the control of Edgevana, and User acknowledges that (whether or not such sites are affiliated in any way with Edgevana) Edgevana is not responsible for the accuracy, copyright compliance, legality, decency, or any other aspect of the content of such sites. The inclusion of such a link does not imply endorsement of any site by Edgevana or any association with its operators. Moreover, Edgevana has no obligation to verify any Content submitted by any user or third party or to provide any registration or other information to User concerning any Content.</p>
+                            <ul>
+                                <li class="mb-30">
+                                    <p class="policy__brief">your domain;</p> 
+                                </li>
+                                <li class="mb-30">
+                                    <p class="policy__brief">your IP address;</p> 
+                                </li>
+                                <li class="mb-30">
+                                    <p class="policy__brief">the date, time and duration of your visit;</p> 
+                                </li>
+                                <li class="mb-30">
+                                    <p class="policy__brief">your browser type;</p> 
+                                </li>
+                                <li class="mb-30">
+                                    <p class="policy__brief">your operating system;</p> 
+                                </li>
+                                <li class="mb-30">
+                                    <p class="policy__brief">your page visits;</p> 
+                                </li>
+                                <li class="mb-30">
+                                    <p class="policy__brief">information from third parties;</p> 
+                                </li>
+                                <li class="mb-30">
+                                    <p class="policy__brief">other information about your computer or device; or</p> 
+                                </li>
+                                <li>
+                                    <p class="policy__brief">Internet traffic.</p> 
+                                </li>
+                            </ul>
                         </div>
                         <div class="policy__text">
-                            <h3 class="policy__sub__heading">Compliance</h3>
-                            <p class="policy__brief">User will comply with all applicable laws in connection with use of this Website.</p>
-                        </div>
-                        <div class="policy__text">
-                            <h3 class="policy__sub__heading">Warranty Disclaimers, Limitations on Liability, and Remedies</h3>
-                            <p class="policy__brief">
-                                This Website, its Content, and its links are provided on an “as is” and “as available” basis and are used only at the sole risk of User, to the fullest extent permissible by law. Edgevana disclaims all warranties, express or implied, of any kind, regarding this Website (including its Content, hardware, software, and links), including any express or implied warranties as to fitness for a particular purpose, merchantability, title, timeliness, non-infringement, results, accuracy, completeness, accessibility, compatibility, security, and freedom from computer virus. 
-                                <br><br>
-                                IF APPLICABLE LAW DOES NOT ALLOW THE EXCLUSION OF SOME OR ALL OF THE ABOVE IMPLIED WARRANTIES TO APPLY TO USER, THE ABOVE EXCLUSIONS WILL APPLY TO USER TO THE FULLEST EXTENT PERMITTED BY APPLICABLE LAW.  
-                                <br><br>
-                                Edgevana will not be liable for any damages or losses, including direct, indirect, consequential, special, incidental, or punitive damages, including without limitation damages for lost profits, goodwill, use, data, or other tangible or intangible losses, in connection with use of the internet, this Website, its Content, or its links, however caused, whether in contract, tort, negligence, strict liability or otherwise, even if Edgevana has been advised of the possibility of such damages. 
-                                Edgevana will not be a party to, and will have no responsibility or liability for, any transaction negotiated or arranged by a User arising in connection with this Website. In any event, if any of the above provisions in this Section are not enforceable in an applicable jurisdiction, the maximum liability of Edgevana will be limited to, in the sole discretion of Edgevana, either the (1) correction or deletion of any inaccurate Content or link; or (2) refund of any fees for this Website received by Edgevana from User.
+                            <p class="policy__brief mb-50">Third Parties. We may also obtain Personal Data about Customers from third parties unless prohibited by applicable law, including third parties from whom we have purchased Personal Data, public databases, resellers, channel partners, and marketing partners. We may combine this information with Personal Data provided by you. This helps us to update, expand, and analyze our records, identify new customers, and create more tailored advertising to provide services that may be of interest to you.
                             </p>
+                            <p class="policy__brief">De-identified Data. We may de-identify and aggregate certain data we collect such that the data no longer identifies or can be linked to a particular customer or an individual data subject (“De-identified Data”), subject to the terms of any applicable customer agreements. We may use this De-Identified Data to improve our Services, analyze trends, publish market research, and for other marketing, research or statistical purposes, and may disclose such data to third parties for these specific purposes.</p>
                         </div>
                     </div>
                 </div>
@@ -211,17 +237,23 @@
                 <div class="sec__content">
                     <div class="sec__content__inner">
                         <div class="policy__text">
-                            <h3 class="policy__sub__heading">Indemnification</h3>
-                            <p class="policy__brief">Each User will defend, indemnify, and hold harmless Edgevana and their respective officers, directors, employees, and agents, and any of its licensors, website partners, or contractors from any demands, claims, damages, liabilities, expenses or harms, including attorney’s fees, arising in connection with User’s actions or omissions, including use of this Website, online conduct, breach of these Terms, or dealings or transactions with other persons resulting from use of this Website.</p>
-                        </div>
-                        <h2 class="policy__heading">5. Miscellaneous.</h2>
-                        <div class="policy__text">
-                            <h3 class="policy__sub__heading">Separate Terms and Conditions</h3>
-                            <p class="policy__brief">In connection with User’s use of and/or access to Content contained in certain areas of this Website, it may be necessary for User to consent to policies or terms and conditions in addition to the Terms set forth herein, which User should read carefully before making any use of such Content or areas of this Website. Any such additional terms and conditions will not vary or replace these Terms regarding any use of this Website, unless otherwise expressly stated.</p>
+                            <p class="policy__brief">Other Data. Edgevana collects, uses and maintains certain data related to its business and the Services it provides to Customers, which is not Personal Data; this Privacy Notice does not restrict our use and processing of such data.</p>
                         </div>
                         <div class="policy__text">
-                            <h3 class="policy__sub__heading">Privacy Policy</h3>
-                            <p class="policy__brief">Edgevana is concerned about privacy and has developed a policy to address privacy concerns. User can find the current privacy policy at https://edgevana.com/privacy-policy/ (the “Privacy Policy“). The Privacy Policy is hereby incorporated into these Terms by reference and constitutes a part of these Terms.</p>
+                            <h3 class="policy__sub__heading">Cookies</h3>
+                            <p class="policy__brief">Our Sites use cookies. More information about our use of cookies can be found in our cookie policy at www.edgevana.com/cookies.</p>
+                        </div>
+                        <div class="policy__text">
+                            <h3 class="policy__sub__heading">Use of Personal Data</h3>
+                            <p class="policy__brief">The following describes our purposes for using Personal Data that we process as a data controller. Additional details on how we process your Personal Data may be provided to you in a separate notice or contract.</p>
+                        </div>
+                        <div class="policy__text">
+                            <h3 class="policy__sub__heading">Children</h3>
+                            <p class="policy__brief">The Sites, Services and portal are not for use by children under the age of 16 years and Edgevana does not knowingly collect, store, share or use the Personal Data of children under 16 years. If you are under the age of 16 years, please do not provide any Personal Data to Edgevana, even if prompted to do so. If you are under the age of 16 years and you have provided Personal Data, please ask your parent(s) or guardian(s) to notify Edgevana, and Edgevana will delete all such Personal Data.</p>
+                        </div>
+                        <div class="policy__text">
+                            <h3 class="policy__sub__heading">Marketing</h3>
+                            <p class="policy__brief">Where lawful to do so, and subject to your consent where required, we may communicate with Customers (and related business contacts) about our Services. If you wish to unsubscribe from receiving marketing communications, please email us at webmaster@edgevana.com or use the unsubscribe link in our promotional emails to request that the cessation of these communications.</p>
                         </div>
                     </div>
                 </div>
@@ -236,9 +268,12 @@
                 <div class="sec__content">
                     <div class="sec__content__inner">
                         <div class="policy__text">
-                            <h3 class="policy__sub__heading">Dispute Resolution; Applicable Law and Forum</h3>
-                            <p class="policy__brief">With respect to any and all disputes arising out of or in connection with this Website or these Terms (including without limitation the Privacy Policy), Edgevana and User agree to negotiate in good faith and undertake reasonable efforts to cooperate with one another in order to achieve a mutually satisfactory resolution. Edgevana has no obligation to become involved in any dispute between a User and any other person. This Website, these Terms, and any dispute arising in connection therewith shall be exclusively governed by and construed in accordance with the laws of the State of Delaware and the United States without regard to its conflict of law principles. Edgevana and User agree that all disputes arising under this agreement will be settled exclusively through confidential binding arbitration in Delaware, pursuant to the Rules of Arbitration (“Rules“) of the International Chamber of Commerce (“ICC“) 
-                                by a sole arbitrator nominated by agreement of the parties and confirmed in accordance with the said Rules. The arbitrator´s award shall be binding and may be entered as a judgment in a court of competent jurisdiction. User agrees that Edgevana is entitled to obtain preliminary injunctive relief to the extent allowed by law to enforce any of the provisions of these Terms pending a final arbitral decision.</p>
+                            <h3 class="policy__sub__heading">Security</h3>
+                            <p class="policy__brief">Edgevana maintains (and requires its service providers to maintain) appropriate organizational and technical measures designed to protect the security and confidentiality of Personal Data we process.  However, no environment or security procedures or protocols are ever guaranteed to be 100% secure or error-free.  Accordingly, we cannot be held responsible for unauthorized or unintended access that is beyond our control.  We encourage you to take care when disclosing Personal Data online and use readily available tools and security measures to protect yourself online.</p>
+                        </div>
+                        <div class="policy__text">
+                            <h3 class="policy__sub__heading">Changes to Our Privacy Notice</h3>
+                            <p class="policy__brief">Edgevana will review and update this Privacy Notice periodically to respond to changing legal, technical and business developments. We will note the date of its most recent revision herein. Please review this Privacy Notice frequently to be informed of your rights and how Edgevana is protecting your Personal Data.</p>
                         </div>
                         <div class="contact__information">
                             <div class="contact__information__inner">
@@ -340,9 +375,9 @@
                     </div>
                     <div class="copywrite__links">
                         <ul>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Terms of use</a></li>
-                            <li><a href="#">Cookies Policy</a></li>
+                            <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                            <li><a href="terms-of-use.html">Terms of use</a></li>
+                            <li><a href="cookies.html">Cookies Policy</a></li>
                         </ul>
                     </div>
                 </div>
