--- a/industrie-edge.html
+++ b/industrie-edge.html
@@ -5890,9 +5890,9 @@
                     </div>
                     <div class="copywrite__links">
                         <ul>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Terms of use</a></li>
-                            <li><a href="#">Cookies Policy</a></li>
+                            <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                            <li><a href="terms-of-use.html">Terms of use</a></li>
+                            <li><a href="cookies.html">Cookies Policy</a></li>
                         </ul>
                     </div>
                 </div>
