--- a/cookies.html
+++ b/cookies.html
@@ -65,7 +65,7 @@
                 <!-- sec head -->
                 <div class="breadcrums">
                     <div class="breadcrums__inner">
-                        <a href="#">Home /</a>
+                        <a href="index.html">Home /</a>
                         <span class="active__link">Cookies Policy</span>
                     </div>
                     <div class="page__heading">
