--- a/partner.html
+++ b/partner.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <canvas id="canvas"></canvas>
     <!-- ==== header start ==== -->
     <header class="header">
         <div class="container">
@@ -7363,19 +7364,19 @@
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
-                                <img class="cox_svg" src="assets/svg/trusted-logo1.svg" alt="">
+                                <img class="cox_svg" src="assets/image/trusted-logo1-with-bg.png" alt="">
                             </div>
                             <div class="swiper-slide">
-                                <img class="dell_svg" src="assets/svg/trusted-logo2.svg" alt="">
+                                <img class="cox_svg" src="assets/image/trusted-logo2-with-bg.png" alt="">
                             </div>
                             <div class="swiper-slide">
-                                <img class="amd_svg" src="assets/svg/trusted-logo3.svg" alt="">
+                                <img class="cox_svg" src="assets/image/trusted-logo3-with-bg.png" alt="">
                             </div>
                             <div class="swiper-slide">
-                                <img class="solana_svg" src="assets/svg/trusted-logo4.svg" alt="">
+                                <img class="cox_svg" src="assets/image/trusted-logo4-with-bg.png" alt="">
                             </div>
                             <div class="swiper-slide">
-                                <img class="lenovo_svg" src="assets/svg/trusted-logo5.svg" alt="">
+                                <img class="cox_svg" src="assets/image/trusted-logo5-with-bg.png" alt="">
                             </div>
                         </div>
                     </div>
