update code of podcast page

--- a/podcast.html
+++ b/podcast.html
@@ -4436,11 +4436,24 @@
                         <div class="episodes__wrapper">
                             <div class="episode__inner">
                                 <div class="episode__image">
-                                    <img src="assets/image/episode28.jpg" alt="image-description">
+                                    <img class="teacher" src="assets/image/episode28.jpg" alt="image-description">
+                                    <div class="play-btn-wrapper">
+                                        <a href="">
+                                            <svg class="play-btn" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <circle cx="24" cy="24" r="23" stroke="white" stroke-width="2"></circle>
+                                                <path d="M35.3684 24L18.3158 32.7514L18.3158 15.2486L35.3684 24Z" fill="white"></path>
+                                            </svg>
+                                        </a>
+                                    </div>
+
                                 </div>
                                 <div class="episode__text">
-                                    
-                                    <h2 class="episode__heading">#Episode 28: Chetna Mahajan </h2>
+                                    <div class="episode__head">
+                                        <h2 class="episode__heading">#Episode 28: Chetna Mahajan </h2>
+                                        <p class="date">Date : 12 December 2021</p>
+                                    </div>
+                                    <p class="info">ZoomInfo CIO, Chetna Mahajan believes IT can be reimagined. Join Mark and Chetna as they discuss the importance of company transparency, time vs value, and how a name change helps with external and internal perception.</p>
+
                                 </div>
                             </div>
                         </div>
