--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -401,23 +401,23 @@
                                     fill="#D4DBFC" />
                             </svg>
                             <h2 class="footer__hero__heading">
-                                <a href="#">Let’s Talk!</a>
+                                <a href="contact-us.html">Let’s Talk!</a>
                             </h2>
                         </div>
                         <div class="footer__items__inner">
                             <div class="items">
                                 <h3 class="item__heading">Explore</h3>
                                 <ul>
-                                    <li><a class="item" href="#">About us</a></li>
+                                    <li><a class="item" href="about-us.html">About us</a></li>
                                     <li><a class="item" href="partner.html">Partner</a></li>
-                                    <li><a class="item" href="#">Sustainability</a></li>
+                                    <li><a class="item" href="sustainable.html">Sustainability</a></li>
                                     <li><a class="item" href="career.html">Careers</a></li>
                                 </ul>
                             </div>
                             <div class="items">
                                 <h3 class="item__heading">Resources</h3>
                                 <ul>
-                                    <li><a class="item" href="#">Podcast</a></li>
+                                    <li><a class="item" href="podcast.html">Podcast</a></li>
                                     <li><a class="item" href="#">News room</a></li>
                                 </ul>
                             </div>
