--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </div>
                     <!-- Hero Image -->
                     <div class="hero__img show-on-scroll">
-                        <img class="hero__img_svg" width="495" height="586" src="assets/image/Layer1.png" alt="">
+                        <img class="hero__img_svg" width="495" height="586" src="assets/image/indexHero.png" alt="">
                     </div>
                 </div>
                 <div class="connect_hero_global_map show-on-scroll">
