--- a/index.html
+++ b/index.html
@@ -1562,7 +1562,7 @@
     <script src="assets/js/index.js" defer></script>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script type='text/javascript' src='http://davidlynch.org/projects/maphilight/jquery.maphilight.js'></script>
+    <script type='text/javascript' src='https://davidlynch.org/projects/maphilight/jquery.maphilight.js'></script>
     <script type="text/javascript">
         $(document).ready(function () {
             // $(".map-area area").each(function(){
